PSP/borradores/ae/servlets/world-cup-teams/src/main/java/org/example/worldcupteams/common/errors/UserAlreadyExistsException.java
package org.example.worldcupteams.common.errors;

public class UserAlreadyExistsException extends RuntimeException {
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}

